// <auto-generated />
using System;
using EquipmentDechargeManager.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace EquipmentDechargeManager.Migrations
{
    [DbContext(typeof(DechargeDbContext))]
    partial class DechargeDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("EquipmentDechargeManager.Data.Entities.Decharge", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("DechargeNumber")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("decharge_number");

                    b.Property<int>("EmployeeId")
                        .HasColumnType("integer")
                        .HasColumnName("employee_id");

                    b.Property<DateTime>("IssueDate")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("issue_date");

                    b.Property<string>("Notes")
                        .HasColumnType("text")
                        .HasColumnName("notes");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("status");

                    b.HasKey("Id")
                        .HasName("pk_decharges");

                    b.HasIndex("DechargeNumber")
                        .IsUnique()
                        .HasDatabaseName("ix_decharges_decharge_number");

                    b.HasIndex("EmployeeId")
                        .HasDatabaseName("ix_decharges_employee_id");

                    b.ToTable("decharges", (string)null);
                });

            modelBuilder.Entity("EquipmentDechargeManager.Data.Entities.DechargeItem", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("ConditionAtAssignment")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("condition_at_assignment");

                    b.Property<int>("DechargeId")
                        .HasColumnType("integer")
                        .HasColumnName("decharge_id");

                    b.Property<int>("EquipmentId")
                        .HasColumnType("integer")
                        .HasColumnName("equipment_id");

                    b.HasKey("Id")
                        .HasName("pk_decharge_items");

                    b.HasIndex("DechargeId")
                        .HasDatabaseName("ix_decharge_items_decharge_id");

                    b.HasIndex("EquipmentId")
                        .HasDatabaseName("ix_decharge_items_equipment_id");

                    b.ToTable("decharge_items", (string)null);
                });

            modelBuilder.Entity("EquipmentDechargeManager.Data.Entities.Employee", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("FullName")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)")
                        .HasColumnName("full_name");

                    b.Property<string>("Function")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("function");

                    b.Property<string>("Matricule")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("matricule");

                    b.Property<string>("Region")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("region");

                    b.Property<string>("Structure")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("structure");

                    b.HasKey("Id")
                        .HasName("pk_employees");

                    b.HasIndex("Matricule")
                        .IsUnique()
                        .HasDatabaseName("ix_employees_matricule");

                    b.ToTable("employees", (string)null);
                });

            modelBuilder.Entity("EquipmentDechargeManager.Data.Entities.Equipment", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Brand")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("brand");

                    b.Property<string>("InventoryNumber")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("inventory_number");

                    b.Property<string>("Model")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("model");

                    b.Property<string>("SerialNumber")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("serial_number");

                    b.Property<string>("ShCode")
                        .HasColumnType("text")
                        .HasColumnName("sh_code");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("status");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("type");

                    b.HasKey("Id")
                        .HasName("pk_equipments");

                    b.HasIndex("InventoryNumber")
                        .IsUnique()
                        .HasDatabaseName("ix_equipments_inventory_number");

                    b.HasIndex("SerialNumber")
                        .IsUnique()
                        .HasDatabaseName("ix_equipments_serial_number");

                    b.ToTable("equipments", (string)null);
                });

            modelBuilder.Entity("EquipmentDechargeManager.Data.Entities.EquipmentReturn", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("ConditionReturned")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("condition_returned");

                    b.Property<int>("DechargeItemId")
                        .HasColumnType("integer")
                        .HasColumnName("decharge_item_id");

                    b.Property<DateTime>("ReturnDate")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("return_date");

                    b.HasKey("Id")
                        .HasName("pk_equipment_returns");

                    b.HasIndex("DechargeItemId")
                        .IsUnique()
                        .HasDatabaseName("ix_equipment_returns_decharge_item_id");

                    b.ToTable("equipment_returns", (string)null);
                });

            modelBuilder.Entity("EquipmentDechargeManager.Data.Entities.Decharge", b =>
                {
                    b.HasOne("EquipmentDechargeManager.Data.Entities.Employee", "Employee")
                        .WithMany("Decharges")
                        .HasForeignKey("EmployeeId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired()
                        .HasConstraintName("fk_decharges_employees_employee_id");

                    b.Navigation("Employee");
                });

            modelBuilder.Entity("EquipmentDechargeManager.Data.Entities.DechargeItem", b =>
                {
                    b.HasOne("EquipmentDechargeManager.Data.Entities.Decharge", "Decharge")
                        .WithMany("Items")
                        .HasForeignKey("DechargeId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_decharge_items_decharges_decharge_id");

                    b.HasOne("EquipmentDechargeManager.Data.Entities.Equipment", "Equipment")
                        .WithMany("DechargeItems")
                        .HasForeignKey("EquipmentId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired()
                        .HasConstraintName("fk_decharge_items_equipments_equipment_id");

                    b.Navigation("Decharge");

                    b.Navigation("Equipment");
                });

            modelBuilder.Entity("EquipmentDechargeManager.Data.Entities.EquipmentReturn", b =>
                {
                    b.HasOne("EquipmentDechargeManager.Data.Entities.DechargeItem", "DechargeItem")
                        .WithOne("ReturnRecord")
                        .HasForeignKey("EquipmentDechargeManager.Data.Entities.EquipmentReturn", "DechargeItemId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_equipment_returns_decharge_items_decharge_item_id");

                    b.Navigation("DechargeItem");
                });

            modelBuilder.Entity("EquipmentDechargeManager.Data.Entities.Decharge", b =>
                {
                    b.Navigation("Items");
                });

            modelBuilder.Entity("EquipmentDechargeManager.Data.Entities.DechargeItem", b =>
                {
                    b.Navigation("ReturnRecord");
                });

            modelBuilder.Entity("EquipmentDechargeManager.Data.Entities.Employee", b =>
                {
                    b.Navigation("Decharges");
                });

            modelBuilder.Entity("EquipmentDechargeManager.Data.Entities.Equipment", b =>
                {
                    b.Navigation("DechargeItems");
                });
#pragma warning restore 612, 618
        }
    }
}
