Table employees {
  employee_id int [pk, increment]
  matricule varchar(50) [not null, unique]
  full_name varchar(200) [not null]
  function text [not null]
  structure text [not null]
  region text [not null]
}

Table equipment {
  equipment_id int [pk, increment]
  inventory_number varchar(100) [not null, unique]
  type varchar(100) [not null]
  brand varchar(100) [not null]
  model varchar(100) [not null]
  serial_number varchar(100) [not null, unique]
  sh_code text
  status text [not null]
}

Table decharges {
  decharge_id int [pk, increment]
  decharge_number varchar(50) [not null, unique]
  employee_id int [not null, ref: > employees.employee_id]
  issue_date timestamp [not null]
  status varchar(50) [not null]
}

Table decharge_items {
  decharge_item_id int [pk, increment]
  decharge_id int [not null, ref: > decharges.decharge_id]
  equipment_id int [not null, ref: > equipment.equipment_id]
  condition_at_assignment text [not null]
}

Table equipment_returns {
  return_id int [pk, increment]
  decharge_item_id int [not null, unique, ref: - decharge_items.decharge_item_id]
  return_date timestamp [not null]
  condition_returned varchar(100) [not null]
}
